# arche-api

./: .coveragerc  .env.ci.sample  .env.example  .env.production.sample  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  alembic.ini  coverage.xml  docker-compose.yml  otel-collector.yaml  project_structure.txt  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: project-roadmap.yml
.github/workflows/: ci.yml  issue-status-from-pr.yml  openapi-snapshot.yml  sync-project-roadmap.yml
docs/: API_CONTRACT_QUOTES.md  CACHE_STRATEGY.md  ENGINEERING_GUIDE.md  ERROR_CODES.md  edgar_ledger.md  layering_model.md
docs/mcp/: MANIFEST.md  README.md
docs/templates/: domain_entity_example.py  gateway_example.py  repository_example.py  router_example.py  use_case_example.py
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/json/: stacklion_api_overview.json
migrations/: env.py
migrations/versions/: 000000000000_idempotency_keys.py  20251110_0001_bootstrap_schemas.py  20251124_0001_edgar_metadata.py  20251125_0002_edgar_normalized_payload.py  20251204_0003_md_partitions_2025.py  20251207_0004_ref_xbrl_mapping_overrides.py  20251210_0005_edgar_alignment.py  20251212_0006_edgar_reconciliation_checks.py  2025_12_03_2249-a3c43f0494a0_add_edgar_fact_store_and_dq_tables.py
scripts/: bootstrap_roadmap_labels.sh  ci.sh  export-structure.py  load-test-env.sh  mcp_smoke_test.py  openapi_diff.py  roadmap_gh_issues.sh  sync_project.py
src/arche_api/: main.py  types.py
src/arche_api/adapters/controllers/: base.py  edgar_controller.py  historical_quotes_controller.py  quotes_controller.py
src/arche_api/adapters/dependencies/: edgar_uow.py  health_probe.py
src/arche_api/adapters/gateways/: edgar_gateway.py  marketstack_gateway.py  xbrl_parser_gateway.py
src/arche_api/adapters/mappers/: xbrl_parser.py
src/arche_api/adapters/presenters/: base_presenter.py  edgar_dq_presenter.py  edgar_overrides_presenter.py  edgar_presenter.py  fundamentals_presenter.py  market_data_presenter.py  quotes_presenter.py  reconciliation_presenter.py
src/arche_api/adapters/repositories/: base_repository.py  edgar_dq_repository.py  edgar_facts_repository.py  edgar_filings_repository.py  edgar_reconciliation_checks_repository.py  edgar_statement_alignment_repository.py  edgar_statements_repository.py  idempotency_repository.py  market_data_repository.py  staging_repository.py  xbrl_mapping_overrides_repository.py
src/arche_api/adapters/routers/: __init__.py  api_router.py  base_router.py  edgar_router.py  fundamentals_router.py  health_router.py  historical_quotes_router.py  mcp_router.py  metrics_router.py  openapi_registry.py  protected_router.py  quotes_router.py  reconciliation_router.py  views_router.py
src/arche_api/adapters/uow/: __init__.py  sqlalchemy_uow.py
src/arche_api/application/: uow.py
src/arche_api/application/interfaces/: cache_port.py  edgar_gateway.py  market_data_gateway.py
src/arche_api/application/services/: persist_reconciliation_checks.py  xbrl_mapping_overrides.py
src/arche_api/config/: settings.py
src/arche_api/config/features/: auth.py
src/arche_api/dependencies/: edgar.py  market_data.py
src/arche_api/mcp/: server.py
src/arche_api/tasks/: cli.py
src/stacklion_api/: main.py  types.py
src/stacklion_api/application/: uow.py
src/stacklion_api/config/: __init__.py  settings.py
src/stacklion_api/dependencies/: edgar.py  market_data.py
src/stacklion_api/mcp/: server.py
src/stacklion_api/tasks/: cli.py
tests/: conftest.py
tests/arch/: test_domain_entities_conventions.py  test_layering.py  test_router_conventions.py  test_use_case_conventions.py
tests/auth/: test_principals.py
tests/config/: test_settings.py
tests/contracts/: test_envelopes_contracts.py
tests/data/: marketstack_eod.json
tests/di/: test_cold_start.py
tests/e2e/: test_rate_limit.py
tests/fixtures/: presenters_testkit.py
tests/governance/: test_no_openapi_monkeypatch.py  test_pagination_contract.py
tests/integration/: test_otel_boots.py
tests/integration/caching/: test_cache_smoke.py
tests/integration/external_apis/: test_marketstack_live.py
tests/integration/gateway/: test_marketstack_gateway.py
tests/integration/http/: test_fundamentals_timeseries_endpoint.py  test_trace_and_errors.py  test_trace_id_middleware.py
tests/integration/mcp/: test_mcp_server.py
tests/integration/middleware/: test_idempotency_middleware.py  test_request_id_integration.py
tests/integration/observability/: test_metrics_historical_quotes.py
tests/integration/repositories/: test_edgar_statement_alignment_repository.py  test_idempotency_repository.py
tests/integration/routers/: test_auth_hs256.py  test_historical_quotes_422_params.py  test_historical_quotes_etag.py  test_historical_quotes_router.py  test_historical_quotes_router_error_mapping.py  test_historical_quotes_validation_window.py  test_quotes_router.py  test_rate_limit_headers_a2.py  test_readyz_with_deps.py
tests/openapi/: test_openapi_snapshot.py  test_operation_ids_unique.py  update_snapshot.py
tests/openapi/snapshots/: openapi.json
tests/typing/: test_dto_audit_fields.py  test_dto_domain_parity.py
tests/unit/adapters/: test_market_data_repository.py
tests/unit/application/: test_ingest_edgar_filings.py  test_ingest_marketstack_intraday.py
tests/unit/auth/: test_jwt_dependency_more.py
tests/unit/config/: test_auth_features.py  test_settings_env_and_auth.py  test_settings_env_branches.py  test_settings_prod_cors.py
tests/unit/dependencies/: test_bootstrap_error_paths.py  test_market_data_dependencies.py  test_market_data_real_gateway_and_cache.py
tests/unit/infrastructure/: test_logger.py  test_otel.py
tests/unit/mcp/: test_arche_http_client.py  test_capabilities_quotes.py  test_capabilities_system.py  test_stacklion_http_client.py
tests/unit/observability/: test_metrics_core.py  test_metrics_helpers.py  test_metrics_market_data.py
(+510 files in other folders)
