[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arche-api"
version = "0.1.0"
description = "Professional-grade financial data API (Clean Architecture, FastAPI, SQLAlchemy, Pydantic v2, Redis)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Protos Systems / Kevin Downey" }]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Typing :: Typed",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.115",
  "starlette>=0.40",                        # keep in sync with FastAPI
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "python-jose[cryptography]>=3.3",
  "prometheus-client>=0.20",
  "python-dateutil>=2.9",
    "grimp>=3.4,<4.0",
    "defusedxml",
]

[project.optional-dependencies]
dev = [
  # testing
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "anyio>=4.4",
  "fakeredis>=2.23",
  "python-dotenv>=1.0",
    "grimp>=3.4,<4.0",
    "defusedxml",



  # quality
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",

  # typing stubs
  "types-redis>=4.6.0.20240425",
  "types-python-jose>=3.3.4.20240115",
  "types-python-dateutil>=2.9.0.20240316",

  # jwt/tools for dev (tests import `jwt`)
  "PyJWT>=2.9,<3",

  # observability tooling needed by tests (otel)
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-asgi>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
]
otel = [
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-asgi>=0.48b0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
]

[project.urls]
Homepage = "https://stacklion.io"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "benchmarks*", "loadtests*", "docs*", "scripts*"]

# Ensure typing is recognized by type checkers (add src/stacklion_api/py.typed)
[tool.setuptools.package-data]
"stacklion_api" = ["py.typed"]

# ======================================================================
# Ruff (Lint)
# ======================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
respect-gitignore = true
force-exclude = true
extend-exclude = [
  ".venv",
  ".fresh",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "htmlcov",
  "scripts",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # bugbear
  "SIM",  # flake8-simplify
  "ASYNC",
  "A",    # builtins
  "S",    # security
  "C90",  # mccabe complexity
  "D",    # docstring style (Google via pydocstyle)
]
ignore = [
  "E501", # line length handled by Black

  # We don't care about module/package-level docstrings.
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package

  # Known-incompatible or noisy docstring layout rules.
  "D203",
  "D212",
  "D213",
]

[tool.ruff.lint.isort]
known-first-party = ["stacklion_api"]
force-single-line = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests: allow asserts and NO docstring enforcement.
"tests/**/*.py" = [
  "S101",
  "D",
]

# Templates/examples: we don't want docstring rules to block the build here.
"docs/templates/**/*.py" = [
  "D",
]

# Alembic env + migrations: bootstrap / historical, not dev-facing API.
"migrations/env.py" = [
  "E402",
  "D",
]
"migrations/versions/**/*.py" = [
  "D",
]

# Main entrypoint: keep bind rule, but don't enforce docstrings here.
"src/stacklion_api/main.py" = [
  "S104",
  "D",
]

# JWT dependency: FastAPI Depends hack + we don't care about docstrings here.
"src/stacklion_api/infrastructure/auth/jwt_dependency.py" = [
  "B008",
  "D",
]

# Internal infrastructure and glue that are not dev-facing APIs.
"src/stacklion_api/infrastructure/**/*.py" = [
  "D",
]
"src/stacklion_api/config/**/*.py" = [
  "D",
]
"src/stacklion_api/dependencies/**/*.py" = [
  "D",
]
"src/stacklion_api/mcp/**/*.py" = [
  "D",
]
"src/stacklion_api/utils/**/*.py" = [
  "D",
]

# ======================================================================
# Black (Format)
# ======================================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
 |\.fresh
 |\.git
 |\.mypy_cache
 |\.pytest_cache
 |\.ruff_cache
 |build
 |dist
 |htmlcov
 |scripts
)/
'''

# ======================================================================
# MyPy (Typing)
# ======================================================================
[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
namespace_packages = true
strict = true
mypy_path = ["src"]

# tests are typed lazily; exclude them from strict collection
exclude = ["^tests/"]

# Strict defaults
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true

# Keep vendor imports from breaking strict mode; be explicit below too
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "fastapi", "fastapi.*",
  "starlette", "starlette.*",
  "sqlalchemy", "sqlalchemy.*",
  "httpx", "uvicorn",
  "alembic", "alembic.*",
  "pytest", "pytest.*",
  "pydantic_settings", "jose", "jose.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "stacklion_api.adapters.*",
  "stacklion_api.infrastructure.*",
  "stacklion_api.config.*",
  "stacklion_api.main",
  "migrations.env",
]
disable_error_code = ["misc", "import-untyped", "no-any-return",]

[[tool.mypy.overrides]]
module = "stacklion_api.tasks.cli"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# ======================================================================
# Coverage (used by pytest-cov)
# ======================================================================
[tool.coverage.run]
branch = true
source = ["src/stacklion_api"]
omit = [
  "tests/*",
  "*/site-packages/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

# ======================================================================
# Pytest
# ======================================================================
[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "8.0"
addopts = """
  -q
  --strict-markers
  --disable-warnings
  --cov=stacklion_api
  --cov-report=term-missing:skip-covered
  --cov-report=xml
  --cov-fail-under=80
"""
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that hit real infrastructure (db/redis)",
  "e2e: end-to-end tests through the API surface",
]
